# CodeStrux

./: README.md  build_log.txt  package-lock.json  package.json
src/: App.tsx  ModelSearch.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  lib.rs  main.rs  store.rs
src-tauri/src/chat/: commands.rs  logging.rs  mod.rs  server.rs  state.rs  types.rs
src-tauri/src/download/: client.rs  commands.rs  transfer.rs  types.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/rag/: embedding.rs  retrieval.rs  vector_storage.rs
src/components/chat/: ChatArea.tsx  InputBar.tsx  Message.tsx  MessageList.tsx
src/components/hardware/: HardwarePanel.tsx  index.ts  useHardware.ts
src/components/layout/: Header.tsx  index.ts
src/components/layout/header/: Header.tsx  ModelSearch.tsx  WindowControls.tsx
src/components/layout/header/model-search/: FileListPanel.tsx  ModelSearch.tsx  SearchBar.tsx  SearchResultsDropdown.tsx  useModelSearch.ts
src/components/settings/: ModelListSection.tsx  SettingsPanel.tsx
src/lib/: Download.ts
src/types/: index.ts
